--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -5,6 +5,9 @@ on:
     branches: [ main ]
   pull_request:
 
+permissions:
+  contents: read  # apenas leitura do repositório
+
 jobs:
   checkov-scan:
     runs-on: ubuntu-latest
