teste com personalizadas

--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -21,4 +21,4 @@ jobs:
         run: pip install checkov
 
       - name: Rodar análise de segurança
-        run: checkov -d . --quiet
+        run: checkov -d . --external-checks-dir ./checkov_policies --check CUSTOM_AWS_TAGS_1,CUSTOM_AWS_BUDGET_1,CKV_AWS_41,CKV_AWS_19,CKV_AWS_20,CKV2_AWS_6,CKV_AWS_23,CKV_AWS_24,CKV_AWS_25,CKV_AWS_277,CKV_AWS_382,CKV2_AWS_5,CKV2_AWS_12,CKV_AWS_106,CKV2_AWS_2,CKV_AWS_96,CKV_AWS_139,CKV_AWS_140,CKV_AWS_146,CKV_AWS_293,CKV_AWS_302,CKV_AWS_313,CKV2_AWS_60,CKV2_AWS_69,CKV_AWS_49,CKV_AWS_60,CKV_AWS_61,CKV_AWS_62,CKV_AWS_63,CKV_AWS_107,CKV_AWS_108,CKV_AWS_109,CKV_AWS_110,CKV_AWS_111,CKV_AWS_274,CKV_AWS_289,CKV_AWS_290,CKV2_AWS_40,CKV_AWS_97,CKV_AWS_223,CKV_AWS_332,CKV_AWS_333,CKV_AWS_334,CKV_AWS_66,CKV_AWS_174,CKV_AWS_45,CKV_AWS_115,CKV_AWS_173,CKV_AWS_46,CKV_AWS_79,CKV_AWS_88,CKV2_AWS_41,CKV_AWS_135,CKV_AWS_29,CKV_AWS_30,CKV_AWS_32,CKV_AWS_51,CKV_AWS_136,CKV_AWS_42,CKV_AWS_64,CKV_AWS_105,CKV_AWS_142,CKV_AWS_83,CKV_AWS_137,CKV_AWS_74,CKV_AWS_75,CKV_AWS_78,CKV_AWS_112,CKV_AWS_127,CKV_AWS_130,CKV_AWS_150,CKV_AWS_261,CKV_AWS_245
