--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -57,4 +57,4 @@ jobs:
         # Este comando irá rodar e, se falhar, fará o Job inteiro falhar
         run: |
           echo "Rodando scan do Checkov com as regras baixadas..."
-          checkov -d . 
+          checkov -d . --skip-check CKV2_AWS_62,CKV2_AWS_6,CKV_AWS_144,CKV_AWS_21,CKV_AWS_145,CKV2_AWS_61,CKV_AWS_18
