--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -54,7 +54,10 @@ jobs:
           echo "Regras baixadas."
 
       - name: Rodar análise de segurança
-        # Este comando irá rodar e, se falhar, fará o Job inteiro falhar
         run: |
-          echo "Rodando scan do Checkov com as regras baixadas..."
-          checkov -d ./terraform --config-file ${{ github.workspace }}/checkov_policies/.checkov.yml --skip-check CKV_AWS_19,CKV2_AWS_62,CKV2_AWS_6,CKV_AWS_144,CKV_AWS_21,CKV_AWS_145,CKV2_AWS_61,CKV_AWS_18,CKV_AWS_20
+          echo "Rodando scan do Checkov na pasta ./terraform usando a CONFIGURAÇÃO do S3..."
+          echo "Verificando se o arquivo de config foi baixado:"
+          ls -la ${{ github.workspace }}/checkov_policies # Debug
+          
+          # Comando corrigido: Confia apenas no arquivo de configuração baixado
+          checkov -d ./terraform --config-file ${{ github.workspace }}/checkov_policies/.checkov.yml
